unpackaged/main/default/objects/Applicant__c/Applicant__c.object-meta.xml
<CustomObject>
    <label>Applicant</label>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Applicant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>