unpackaged/main/default/objects/Applicant__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <formula>Account__r.PersonContact.Birthdate</formula>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>