unpackaged/main/default/objects/Applicant__c/fields/ChangesExpectedNext3Years__c.field-meta.xml
<CustomField>
    <fullName>ChangesExpectedNext3Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are changes expected in next 3 years?</label>
    <type>Checkbox</type>
</CustomField>