unpackaged/main/default/objects/Applicant__c/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent</label>
    <type>Checkbox</type>
</CustomField>