unpackaged/main/default/objects/Applicant__c/fields/DriverLicenseSupplied__c.field-meta.xml
<CustomField>
    <fullName>DriverLicenseSupplied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver License Supplied</label>
    <type>Checkbox</type>
</CustomField>