unpackaged/main/default/objects/Applicant__c/fields/EmploymentType__c.field-meta.xml
<CustomField>
    <fullName>EmploymentType__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
            <value>
                <fullName>Casual</fullName>
            </value>
            <value>
                <fullName>Self-employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>