unpackaged/main/default/objects/Applicant__c/fields/HousekeepingandBureauConsent__c.field-meta.xml
<CustomField>
    <fullName>HousekeepingandBureauConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Housekeeping and Bureau Consent (Depreca</label>
    <type>Checkbox</type>
</CustomField>