unpackaged/main/default/objects/Applicant__c/fields/IdentityResultAML__c.field-meta.xml
<CustomField>
    <fullName>IdentityResultAML__c</fullName>
    <label>Identity Result AML</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
            <value>
                <fullName>UNCHECKED</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>