unpackaged/main/default/objects/Applicant__c/fields/InviteLater__c.field-meta.xml
<CustomField>
    <fullName>InviteLater__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Later</label>
    <type>Checkbox</type>
</CustomField>