unpackaged/main/default/objects/Applicant__c/fields/InviteNow__c.field-meta.xml
<CustomField>
    <fullName>InviteNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invite Now</label>
    <type>Checkbox</type>
</CustomField>