unpackaged/main/default/objects/Applicant__c/fields/Onbehalfofotherapplicant__c.field-meta.xml
<CustomField>
    <fullName>Onbehalfofotherapplicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Behalf of Other Applicant (Deprecated</label>
    <type>Checkbox</type>
</CustomField>