unpackaged/main/default/objects/Applicant__c/fields/OtherName__c.field-meta.xml
<CustomField>
    <fullName>OtherName__c</fullName>
    <label>Other Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>