unpackaged/main/default/objects/Applicant__c/fields/PhotoIdCardNumber__c.field-meta.xml
<CustomField>
    <fullName>PhotoIdCardNumber__c</fullName>
    <label>Photo Id Card Number (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>