unpackaged/main/default/objects/Applicant__c/fields/ProgressStep__c.field-meta.xml
<CustomField>
    <fullName>ProgressStep__c</fullName>
    <label>Progress Step</label>
    <length>255</length>
    <type>Text</type>
</CustomField>