unpackaged/main/default/objects/Applicant__c/fields/TaxInfoDeclarationSignedDate__c.field-meta.xml
<CustomField>
    <fullName>TaxInfoDeclarationSignedDate__c</fullName>
    <inlineHelpText>If this field is blank then tax declaration has not been signed</inlineHelpText>
    <label>Tax Info Declaration Signed Date</label>
    <type>DateTime</type>
</CustomField>