unpackaged/main/default/objects/Applicant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
                <default>true</default>
                <label>Borrower</label>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>