unpackaged/main/default/objects/Applicant__c/fields/UnableExpense__c.field-meta.xml
<CustomField>
    <fullName>UnableExpense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable Expense</label>
    <type>Checkbox</type>
</CustomField>