unpackaged/main/default/objects/Applicant__c/fields/UnableIncome__c.field-meta.xml
<CustomField>
    <fullName>UnableIncome__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable Income</label>
    <type>Checkbox</type>
</CustomField>