unpackaged/main/default/objects/Applicant__c/fields/UnableLoan__c.field-meta.xml
<CustomField>
    <fullName>UnableLoan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable Loan</label>
    <type>Checkbox</type>
</CustomField>